--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -33,4 +33,5 @@
 
     /* Layout */
     --content-width: 650px;
+    --content-padding: 30px;
 }
